--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,8 @@ dmypy.json
 .mypy_cache
 
 # папки со статикой и медиа
-static/
-yatube/posts/static/
-yatube/media/
+# временно разрешаю скинуть статические файлы на гитхаб
+# static/
+# yatube/posts/static/
+# yatube/media/
 
